2012-03-16  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): New intrinsic functions
	chain, andf, orf, iff.

	* lib.c (chainv): New function.
	(do_and, do_or): Generalized to handle functions of
	any arguments via apply.
	(andf, orf): Turn do_and and do_or into variadic function instead of a
	monadic function.
	(do_iff): New static function.
	(andv, orv, iff): New functions.

	* lib.h (chainv, andv, orv, iff): New functions declared.

	* txr.1: Doc stubs created.

	* txr.vim: Updated.

2012-03-16  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (quicksort): Bugfix: incorrect loop from 0 rather than from
	leading to unbounded recursion.

2012-03-15  Kaz Kylheku  <kaz@kylheku.com>

	Version 61

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* eval.c (op_modplace): Fix warning about uninitialized variable.
	No bug.

	* filter.c: gcc compilation regresion: missing <stdio.h> breaks inclusion
	of "stream.h" header. Strangely, didn't show up when configured for
	compiling with g++ on Ubuntu.

	* match.c (match_filter): Fixed ununsed variable warning.

	* txr.vim: Bunch of missing keywords added.

	* dep.mk: Regenerated.

2012-03-15  Kaz Kylheku  <kaz@kylheku.com>

	* tests/010/block.expected: New file.

	* tests/010/block.txr: New file.

	* tests/010/reghash.expected: New file.

	* tests/010/reghash.txr: New file.

2012-03-14  Kaz Kylheku  <kaz@kylheku.com>

	* RELNOTES: Updated for upcoming 61.

2012-03-14  kaz kylheku  <kaz@kylheku.com>

	* txr.1: Documented hash and vector quasiliterals.

2012-03-14  Kaz Kylheku  <kaz@kylheku.com>

	Support quasiquoting over vectors also, and a bugfix for hash
	quasiquoting.  We cannot use the same symbol for the
	literal form from the parser, and for the expanded form,
	because this creates a confusion when there are multiple
	nestings of quasiquote expansion.

	* eval.c (vector_lit_s, vector_list_s, hash_lit_s): New symbol
	variables.